WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271507
Fixes after
276579@main
: New exception handler adoption with fallback.
https://bugs.webkit.org/show_bug.cgi?id=271507
Summary
Fixes after 276579@main: New exception handler adoption with fallback.
Mark Lam
Reported
2024-03-22 17:59:40 PDT
276579@main
had 2 bugs that we should fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-22 18:00:06 PDT
<
rdar://problem/125270901
>
Mark Lam
Comment 2
2024-03-22 18:19:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26360
EWS
Comment 3
2024-03-23 13:19:02 PDT
Committed
276601@main
(123b9c7ce25c): <
https://commits.webkit.org/276601@main
> Reviewed commits have been landed. Closing PR #26360 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug