Fixes after 276579@main: New exception handler adoption with fallback. https://bugs.webkit.org/show_bug.cgi?id=271507 rdar://125270901

Reviewed by Keith Miller.

1. fallbackToOldExceptions should not be a static variable since it's used in more than one
   compilation unit.  Make it a global.
2. initMachExceptionHandlerThread() should add Signal::FloatingPoint to its exceptionsAllowed
   mask.  This is just debugging code that was accidentally left in.  Remove it.

* Source/WTF/wtf/threads/Signals.cpp:
(WTF::initMachExceptionHandlerThread):
* Source/WTF/wtf/threads/Signals.h:

Canonical link: https://commits.webkit.org/276601@main